--- a/less/custom.less
+++ b/less/custom.less
@@ -115,6 +115,7 @@ header{
 			display: inline-block;
 			margin: 0px 0px 0px 6px;
 			vertical-align: top;
+			font-size: 30px;
 		}
 		.result-description{
 			overflow: hidden;
@@ -220,8 +221,11 @@ header{
 	}
 
 }
-.results-list-container{
+#searchResults{
 	margin-top: 40px;
+}
+.results-list-container{
+	
 	a{
 		text-decoration: none;
 		color: @black;
@@ -243,9 +247,8 @@ header{
 		display: inline-block;
 		vertical-align: top;
 		top: 0px;
-		left: 107px;
+		left: 74px;
 		position: absolute;
-		font-size: 30px;
 		line-height: 1.1em;
 	}
 	p{
